--- a/app/src/main/res/layout/activity_appoint_chef.xml
+++ b/app/src/main/res/layout/activity_appoint_chef.xml
@@ -7,10 +7,11 @@
     tools:context=".AppointChef">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView_chef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Appoint Chef Activity"
+        android:text="Appoint Chef Activity for phone no"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
