--- a/app/src/main/res/layout/activity_decore_events.xml
+++ b/app/src/main/res/layout/activity_decore_events.xml
@@ -13,8 +13,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@android:color/holo_red_light">
-
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Get The Decoration Set You Liked"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:background="@android:color/holo_blue_bright"
+            android:gravity="center"/>
 
 
         <GridLayout
@@ -23,13 +29,14 @@
             android:layout_height="match_parent"
             android:alignmentMode="alignMargins"
             android:columnCount="1"
-            android:rowCount="6"
-            android:minHeight="1200dp"
             android:columnOrderPreserved="false"
-            android:padding="14dp">
+            android:minHeight="1200dp"
+            android:padding="14dp"
+            android:rowCount="6">
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -37,43 +44,46 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="16dp"
                     android:orientation="vertical">
-
                     <ImageView
                         android:layout_width="334dp"
-                        android:layout_height="280dp"
+                        android:layout_height="166dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/classicaldecore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Classical Decore Set "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 15000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 15000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -81,6 +91,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,31 +104,34 @@
                         android:layout_height="166dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/youth_sensational_decore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Youth Choiced  Decore Set "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 20000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 20000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -125,6 +139,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -137,31 +152,34 @@
                         android:layout_height="280dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/premiumdecore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="Premium  Decore Set "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 25000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 25000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -169,6 +187,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -181,31 +200,34 @@
                         android:layout_height="280dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/royaldecore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text=" Royal Decore Set"
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 30000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 30000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -213,6 +235,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -225,31 +248,34 @@
                         android:layout_height="280dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/stunningdecore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text=" Stunning  Decore Set"
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 35000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 35000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                android:layout_height="400dp"
                 android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_marginLeft="16dp"
@@ -257,6 +283,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -269,24 +296,26 @@
                         android:layout_height="280dp"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/premiumlightedroyaldecore" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text=" Premium Lighted Royal Decore Set"
-                        android:textStyle="bold"
-                        android:textSize="20dp"
-                        android:gravity="center"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Price Charge : 50000 INR "
-                        android:textStyle="bold"
-                        android:textSize="20dp"
                         android:gravity="center"
+                        android:text="Price Charge : 50000 INR "
+                        android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textAlignment="center"/>
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
