--- a/app/src/main/res/layout/activity_new_reg.xml
+++ b/app/src/main/res/layout/activity_new_reg.xml
@@ -62,7 +62,7 @@
         android:ems="10"
         android:hint="Password"
         android:layout_below="@id/Rmail"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
