--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_bright"
     tools:context=".ui.help.HelpFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="Mail us your query at - \neventiators.care.2021@gmail.com\n\nPostal Address -\n Governement Polytechnic Pune,\nShivajiNagar,\nPune -411003,\nMaharashtra,\nIndia."
+        android:text="Mail us your query at - \neventiators.care.2021@gmail.com\n\nPostal Address -\nGovernement Polytechnic Pune,\nShivajiNagar,\nPune -411003,\nMaharashtra,\nIndia."
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
