--- a/app/src/main/res/layout/item_decoration_order.xml
+++ b/app/src/main/res/layout/item_decoration_order.xml
@@ -6,9 +6,7 @@
     app:cardElevation="18dp"
     app:cardCornerRadius="5dp"
     android:layout_margin="5dp"
-    android:layout_marginBottom="25dp"
-
-   >
+    android:layout_marginBottom="25dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
